--- a/style.css
+++ b/style.css
@@ -1,17 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
 }
 
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 90%;
+    justify-content: center;
+    align-items: baseline;
+    text-align: center;
     margin: 0 auto;
 }
 
+.main {
+    width: 800px;
+}
+
 .square {
-    background-color: forestgreen;
-    width: 2em;
-    height: 2em;
+    background-color: rgb(188, 240, 188);
+    width: 72.7px;
+    height: 72.7px;
+}
+
+.dice {
+    justify-content: space-around;
+    padding: 1.5em 1em;
+    display: none;
+}
+
+.btn {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    border: none;
+    padding: 1em 2em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 1em;
+}
+
+h3 {
+    font-size: 2rem;
 }
