--- a/style.css
+++ b/style.css
@@ -49,9 +49,19 @@ h3 {
     font-size: 2rem;
 }
 
+.player-1 {
+    background: coral;
+    border-radius: 50px;
+}
+
+.player-2 {
+    background: cornflowerblue;
+    border-radius: 50px;
+}
+
 /* edit as necessary */
 
-#modal {
+.modal {
     background-color: coral;
     color: white;
     padding: 20px;
@@ -62,7 +72,7 @@ h3 {
     top: 30%;
 }
 
-#overlay {
+.overlay {
     display: none;
     width: 100%;
     height: 100%;
